--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ markdown: kramdown
 permalink: pretty
 
 theme: jekyll-theme-hydeout
+remote_theme: fongandrew/hydeout
 
 exclude: [Rakefile, Gemfile*, vendor]
 include: [feed.xml]
