--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ url: "https://dnoneill.github.io"
 markdown: kramdown
 permalink: pretty
 
-theme: just-the-docs
-remote_theme: pmarsceill/just-the-docs
+theme: jekyll-readthedocs
+remote_theme: pawamoy/jekyll-readthedocs
 
 exclude: [Rakefile, Gemfile*, vendor]
 include: [feed.xml]
@@ -21,8 +21,6 @@ webrick:
     "Access-Control-Allow-Origin": "*"
 
 api_server: https://limitless-plains-74009.herokuapp.com/annotations/
-
-github_username: ncsu-libraries
 
 exclude:
   - ENV/
