--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ webrick:
     "Access-Control-Allow-Origin": "*"
 
 api_server: https://limitless-plains-74009.herokuapp.com/annotations/
+endpoint: https://limitless-plains-74009.herokuapp.com/write_annotation/
 
 exclude:
   - ENV/
