--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Local IIIF Annotation Server
-description: "Local IIIF annotation server that allows for easy annotation creation."
+title: Local Annotation Server
+description: "Local annotation server that allows for easy annotation creation."
 baseurl: "/annotate"
 url: "https://dnoneill.github.io"
 
