--- a/_ansible/playbook.yml
+++ b/_ansible/playbook.yml
@@ -13,6 +13,14 @@
       yum:
         name: '*'
         state: latest 
+    - name: centos release
+      yum:
+        name: centos-release-scl
+        state: latest
+    - name: git
+      yum:
+        name: git
+        state: latest
     - name: epel-release
       yum:
         name: epel-release
