--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,11 @@ collections:
   annotation_data:
     output: true
     permalink: /annotations/:name
+  custom_images: 
+	    metadata:
+	      source: 'objects.csv' # path to the metadata file, must be within '_data'
+	    images:
+	      source: 'custom' # path to the directory of source images, must be within '_data'
 
 webrick:
   headers:
