--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ webrick:
   headers:
     "Access-Control-Allow-Origin": "*"
 
-api_server: http://0.0.0.0:5000/
-endpoint: http://0.0.0.0:5000/write_annotation/
+api_server: http://localhost:5000/
+endpoint: http://localhost:5000/write_annotation/
 
 exclude:
   - ENV/
