--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude: [Rakefile, Gemfile*, vendor, ENV, imported_roles]
 include: [feed.xml]
 
 theme: annotate-theme
-remote-theme: dnoneill/annotate-theme
+remote_theme: dnoneill/annotate-theme
 
 collections:
   annotations:
