--- a/_config.yml
+++ b/_config.yml
@@ -60,3 +60,17 @@ lunr_settings:
     facetfield: true
 
   fuzzysearchfields: [content]
+
+creatorpopup: true
+popupinformation: |
+  Please enter this your name in this field.
+  <br>
+  You do not have enter your full name, a GitHub username is preferred.
+  <br>
+  Your affiliation would be much appreciated if you do not want to enter your name.
+  <br>
+  This information will give me a better idea of how many people are interested in the tool.
+  <br>
+  <b>Please feel free to remain anonymous.
+  If you don't want to enter any information leave blank and hit enter.</b>
+  <br>
